# qwen.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  README-CN.md  README.md  base64.h  main.cpp  pyproject.toml  qwen.cpp  qwen.h  qwen_pybind.cpp  qwen_test.cpp  setup.py  tiktoken.h  unordered_dense.h
qwen_cpp/: __init__.py  convert.py  openai_api.py
tests/: benchmark.py  test_convert.py
tests/data/: qwen7b_attn.data  qwen7b_mlp.data  qwen7b_wte.data
tiktoken_cpp/: core.py
